[build-system]
requires = ["setuptools", "wheel", "versioneer-518"]  # PEP 508 specifications.

##########
## MyPy ##
##########
[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
files = ["src"]
exclude = ["migrations/"]
no_implicit_reexport = true
plugins = ["pydantic.mypy", "sqlmypy"]
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true

[pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module= "fides._version"
ignore_errors=true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "AccessControl.*",
  "alembic.*",
  "apscheduler.*",
  "boto3.*",
  "botocore.*",
  "bson.*",
  "cassandra.*",
  "celery.*",
  "citext.*",
  "dask.*",
  "deepdiff.*",
  "defusedxml.ElementTree.*",
  "fideslog.*",
  "firebase_admin.*",
  "google.api_core.*",
  "joblib.*",
  "jose.*",
  "jwt.*",
  "multidimensional_urlencode.*",
  "networkx.*",
  "nh3.*",
  "okta.*",
  "pandas.*",
  "pg8000.*",
  "plotly.*",
  "pydash.*",
  "pygtrie.*",
  "pymongo.*",
  "pymysql.*",
  "RestrictedPython.*",
  "sendgrid.*",
  "snowflake.*",
  "sqlalchemy_utils.*",
  "sqlalchemy.ext.*",
  "sqlalchemy.future.*",
  "twilio.*",
  "uvicorn.*",
  "validators.*",
]
ignore_missing_imports = true

###########
## Black ##
###########
[tool.black]
target-version = ["py39"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

###########
## isort ##
###########
[tool.isort]
known_first_party = ["versioneer"]
known_third_party = ["nox"]
profile = "black"
line_length = 88
src_paths = ["src", "tests", "noxfiles"]

############
## Pylint ##
############
[tool.pylint.messages_control]
disable=[
    "bad-option-value",
    "broad-except",
    "consider-using-f-string",
    "dangerous-default-value",
    "duplicate-code",
    "fixme",
    "import-error",
    "import-outside-toplevel",
    "invalid-name",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-timeout",
    "no-self-argument",
    "no-self-use",
    "raise-missing-from",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-locals",
    "unnecessary-comprehension",
    "unnecessary-lambda-assignment",
    "unsubscriptable-object", # Otherwise throws errors on certain Type annotations
    "unused-argument",
]

[tool.pylint.reports]
reports="no"
output-format="colorized"

[tool.pylint.format]
max-line-length="88"

[tool.pylint.basic]
good-names="_,i,setUp,tearDown,maxDiff,default_app_config"

[tool.pylint.ignore]
ignore="migrations,tests"

[tool.pylint.whitelist]
extension-pkg-whitelist = ["pydantic", "zlib", "cassandra"]

############
## Pytest ##
############
[tool.pytest.ini_options]
env = [
  "FIDES__TEST_MODE=true"
]
log_cli=false
filterwarnings = "ignore::DeprecationWarning:aiofiles.*:"
testpaths="tests"
log_level = "INFO"
addopts = [
    "--cov=fides",
    "--cov-branch",
    "--no-cov-on-fail",
    "-ra",
    "-vv",
    "--disable-pytest-warnings"
]
markers = [
    "unit: only runs tests that don't require non-python dependencies (i.e. a database)",
    "integration: only runs tests that require application dependencies (i.e. a database)",
    "external: only runs tests that require access to non-docker, external services (i.e. Snowflake)",
    "postgres: only runs the integration tests for postgres",
    "mssql: only runs the integration tests for sqlserver/mssql",
    "mysql: only runs the integration tests for mysql",
    "integration",
    "integration_external",
    "integration_mysql",
    "integration_postgres",
    "integration_mongodb",
    "integration_mssql",
    "integration_google_cloud_sql_mysql",
    "integration_google_cloud_sql_postgres",
    "integration_redshift",
    "integration_snowflake",
    "integration_mariadb",
    "integration_bigquery",
    "integration_dynamodb",
    "integration_saas",
    "integration_saas_override",
    "integration_scylladb",
    "unit_saas"
]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["src/fides/api/alembic/migrations/*"]
