[build-system]
requires = ["setuptools", "wheel", "versioneer-518"]  # PEP 508 specifications.

##########
## MyPy ##
##########
[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
files = ["src"]
exclude = ["migrations/"]
no_implicit_reexport = true
plugins = ["pydantic.mypy", "sqlmypy"]
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true

[pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module= "fides._version"
ignore_errors=true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "AccessControl.*",
  "alembic.*",
  "apscheduler.*",
  "boto3.*",
  "botocore.*",
  "bson.*",
  "cassandra.*",
  "celery.*",
  "citext.*",
  "click_default_group.*",
  "dask.*",
  "deepdiff.*",
  "defusedxml.ElementTree.*",
  "fideslog.*",
  "firebase_admin.*",
  "google.api_core.*",
  "joblib.*",
  "jose.*",
  "jwt.*",
  "multidimensional_urlencode.*",
  "networkx.*",
  "nh3.*",
  "okta.*",
  "pandas.*",
  "pg8000.*",
  "pydash.*",
  "pygtrie.*",
  "pymongo.*",
  "pymysql.*",
  "RestrictedPython.*",
  "sendgrid.*",
  "smart_open.*",
  "snowflake.*",
  "sqlalchemy_utils.*",
  "sqlalchemy.ext.*",
  "sqlalchemy.future.*",
  "sqlalchemy_bigquery.*",
  "twilio.*",
  "uvicorn.*",
]
ignore_missing_imports = true

##########
## Ruff ##
##########
[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "tests", "noxfiles", "scripts"]

# Exclude directories
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "build",
    "dist",
    "tests/data",
    "src/fides/_version.py",
    "src/fides/api/alembic/migrations",
]

[tool.ruff.lint]
# Enable specific rule sets that approximate black/isort/pylint behavior
# See https://docs.astral.sh/ruff/rules/ for details
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
]

# Disable rules that correspond to pylint's disabled rules or are too strict initially
ignore = [
    "E501",    # line-too-long (handled by formatter)
    "E402",    # module-import-not-at-top-of-file (import-outside-toplevel)
    "E712",    # true-false-comparison (can be auto-fixed)
    "E711",    # none-comparison (can be auto-fixed)
    "E713",    # not-in-test (can be auto-fixed)
    "E714",    # not-is-test (can be auto-fixed)
    "E721",    # type-comparison
    "E722",    # bare-except (broad-except)
    "E731",    # lambda-assignment (unnecessary-lambda-assignment)
    "F401",    # unused-import (will be noisy in __init__ files)
    "F403",    # undefined-local-with-import-star
    "F405",    # undefined-local-with-import-star-usage
    "F541",    # f-string-missing-placeholders (can tighten later)
    "F841",    # unused-variable (can tighten later)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in test files
"tests/**/*.py" = [
    "ARG",     # Allow unused arguments in tests
    "B",       # Allow some bugbear rules in tests
    "PIE",     # Allow some pie rules in tests
]
# Ignore import violations in __init__.py files
"__init__.py" = ["F401", "F403"]
# Allow some flexibility in scripts and nox files
"scripts/**/*.py" = ["T201", "T203"]
"noxfile.py" = ["T201", "T203"]
"noxfiles/**/*.py" = ["T201", "T203"]

[tool.ruff.lint.isort]
known-first-party = ["fides", "versioneer"]
known-third-party = ["nox"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
# Set complexity threshold to reasonable level
max-complexity = 15

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Like Black, respect magic trailing comma
skip-magic-trailing-comma = false
# Like Black, automatically detect line ending
line-ending = "auto"

############
## Pytest ##
############
[tool.pytest.ini_options]
env = [
  "FIDES__TEST_MODE=true",
  "FIDES__SECURITY__AUTH_RATE_LIMIT=1000/minute",
  "PYTHONDONTWRITEBYTECODE=1"
]
log_cli=false
filterwarnings = "ignore::DeprecationWarning:aiofiles.*:"
testpaths="tests"
log_level = "INFO"
addopts = [
    "-ra",
    "-vv",
    "--disable-pytest-warnings",
    "--junitxml=test_report.xml"
]
markers = [
    "unit: only runs tests that don't require non-python dependencies (i.e. a database)",
    "integration: only runs tests that require application dependencies (i.e. a database)",
    "external: only runs tests that require access to non-docker, external services (i.e. Snowflake)",
    "postgres: only runs the integration tests for postgres",
    "mssql: only runs the integration tests for sqlserver/mssql",
    "mysql: only runs the integration tests for mysql",
    "serial: marks tests that must run sequentially to avoid resource conflicts",
    "async_dsr: marks tests related to async DSR functionality",
    "integration",
    "integration_external",
    "integration_mysql",
    "integration_postgres",
    "integration_mongodb",
    "integration_mongodb_atlas",
    "integration_mssql",
    "integration_google_cloud_sql_mysql",
    "integration_google_cloud_sql_postgres",
    "integration_rds_mysql",
    "integration_rds_postgres",
    "integration_redshift",
    "integration_snowflake",
    "integration_mariadb",
    "integration_bigquery",
    "integration_dynamodb",
    "integration_saas",
    "integration_saas_override",
    "integration_scylladb",
    "unit_saas"
]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["src/fides/api/alembic/migrations/*"]
