[build-system]
requires = ["setuptools", "wheel", "versioneer-518"]  # PEP 508 specifications.

######
# MyPy
######
# [tool.mypy] Waiting for new version of Mypy
# warn_unused_configs = true
# ignore_missing_imports = true
# pretty = true

#######
# Black
#######
[tool.black]
py39 = true
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

########
# Pylint
########
[tool.pylint.master]
ignore="models"

[tool.pylint.messages_control]
disable=[
    "line-too-long",
    "too-few-public-methods",
    "duplicate-code",
    "import-error",
    "unused-argument",
    "no-self-use",
    "import-outside-toplevel",
    "unsubscriptable-object", # Otherwise throws errors on certain Type annotations
    "too-many-arguments",
    "missing-module-docstring",
    "raise-missing-from",
    "fixme"]
extension-pkg-whitelist = "pydantic"

[tool.pylint.reports]
reports="no"
output-format="colorized"

[tool.pylint.format]
max-line-length="88"

[tool.pylint.basic]
good-names="_,i,setUp,tearDown,maxDiff,default_app_config"

########
# Pytest
########
[tool.pytest.ini_options]
testpaths="tests"
log_level = "DEBUG"
addopts = ["--cov=fidesctl.core",
            "--cov=fidesctl.cli",
            "--cov=fideslang",
            "--cov-report=term-missing",
            "-vv",
            "--no-cov-on-fail",
            "--disable-pytest-warnings"]
